Setup postgresql database

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "pre-test": "NODE_ENV=test npm run exec-db-dev",
     "exec-db-dev": "npm run dev-migration && npm run seeder",
     "dev-migration": "DEBUG=app/debug babel-node ./server/model/db/migrations.db",
-    "seeder": "DEBUG=app/seeder babel-node ./server/model/db/seeders.db",
+    "seeder": "DEBUG=app/seeder babel-node ./server/model/db/seed.db",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test"
   },
