--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/shonubijerry/way-farer#readme",
   "dependencies": {
     "@babel/runtime": "^7.4.5",
+    "@hapi/joi": "^15.1.0",
     "async": "^3.1.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
@@ -41,6 +42,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "pg": "^7.11.0",
     "uuid": "^3.3.2"
   },
