--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "dev-migration": "DEBUG=app/debug babel-node ./server/model/db/migrations.db",
     "seeder": "DEBUG=app/seeder babel-node ./server/model/db/seed.db",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test"
+    "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
+    "exec-db-production": "NODE_ENV=development npm run migration && npm run build",
+    "migration": "node ./dist/model/db/migrations.db",
+    "heroku-postbuild": "NODE_ENV=production npm run exec-db-production"
   },
   "repository": {
     "type": "git",
@@ -62,5 +65,9 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.1",
     "nyc": "^14.1.1"
+  },
+  "engines": {
+    "node": "8.10.0",
+    "npm": "3.5.2"
   }
 }
