Add delete specific bookings feature
Users can delete their bookings by calling the
DELETE /bookings/:bookingId endpoint
Note that user will only be able to delete their bookings
while admin can delete all bookings

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-PORT=your_port
+PORT=some_port
+PRODUCTION_DB=production_database_url
+DEV_DB=development_database_url
+TEST_DB=test_database_url
+SECRET_KEY=some_badt_alphanumeric_string
+CURRENT_TOKEN=
+SALT=hashing_integer_value
