--- a/docs/trips.yaml
+++ b/docs/trips.yaml
@@ -23,6 +23,10 @@ paths:
           description: Trip successfully created
           schema:
             $ref: '#/definitions/CreateTripRes'
+        400:
+          description: Bad form input values
+          schema:
+            $ref: '#/definitions/errorDef'
         401:
           description: User login required
           schema:
@@ -54,11 +58,26 @@ paths:
       - application/json
       consumes:
       - application/json
+      parameters:
+      - name: origin
+        in: query 
+        description: query parameter takes origin value
+        required: false
+        type: string
+      - name: destination
+        in: query 
+        description: query parameter takes destination value
+        required: false
+        type: string
       responses:
         200:
           description: Trip successfully fetched
           schema:
             $ref: '#/definitions/GetTripsRes'
+        400:
+          description: Bad query parameters (origin or destination)
+          schema:
+            $ref: '#/definitions/errorDef'
         401:
           description: User login required
           schema:
@@ -92,6 +111,14 @@ paths:
           description: Trip successfully cancelled
           schema:
             $ref: '#/definitions/CancelTripRes'
+        202:
+          description: Trip already cancelled
+          schema:
+            $ref: '#/definitions/errorDef'
+        400:
+          description: Trip id parameter is invalid
+          schema:
+            $ref: '#/definitions/errorDef'
         401:
           description: User login required
           schema:
@@ -102,14 +129,6 @@ paths:
             $ref: '#/definitions/errorDef'
         404:
           description: Content not found
-          schema:
-            $ref: '#/definitions/errorDef'
-        409:
-          description: Trip already patched
-          schema:
-            $ref: '#/definitions/errorDef'
-        422:
-          description: Trip id parameter is invalid
           schema:
             $ref: '#/definitions/errorDef'
         500:
