[#167134259] Add POST /buses endpoint
Admin can create a bus by providing the necessary bus information

--- a/docs/bookings.yaml
+++ b/docs/bookings.yaml
@@ -14,7 +14,7 @@ paths:
       parameters:
       - name: body
         in: body
-        description: User object
+        description: Booking object
         required: true
         schema:
           $ref: '#/definitions/CreateBookingReq'
