[#167183525] Seat number should be optional
At the moment, the POST /bookings endpoint allows a user to specify
their seat number. The seat number should be an optional field in
that when it is not provided, the system should automatically assign
a seat number for the user.

--- a/docs/bookings.yaml
+++ b/docs/bookings.yaml
@@ -15,7 +15,7 @@ paths:
       - name: body
         in: body
         description: Booking object
-        required: true
+        required: false
         schema:
           $ref: '#/definitions/CreateBookingReq'
       responses:
@@ -40,7 +40,7 @@ paths:
           schema:
             $ref: '#/definitions/errorDef'
         409:
-          description: Seat number is already booked
+          description: Seat number is already booked or no available seat on trip
           schema:
             $ref: '#/definitions/errorDef'
         422:
