--- a/docs/buses.yaml
+++ b/docs/buses.yaml
@@ -19,7 +19,7 @@ paths:
         schema:
           $ref: '#/definitions/CreateBusReq'
       responses:
-        200:
+        201:
           description: Bus successfully created
           schema:
             $ref: '#/definitions/CreateBusRes'
@@ -73,14 +73,20 @@ definitions:
     properties:
       number_plate:
         type: string
+        pattern: ^[A-Za-z]{3}-[0-9]{3}-[A-Za-z]{2}$
       manufacturer:
         type: string
       model:
         type: string  
       year:
-        type: string  
+        type: integer
+        format: int32
+        minimum: 1970
       capacity:
-        type: string
+        type: integer
+        format: int32
+        minimum: 1
+        maximum: 400
   CreateBusRes:
     type: object
     properties:
@@ -90,19 +96,26 @@ definitions:
         type: object
         properties:
           id:
-            type: string
+            type: integer
+            format: int64
           number_plate:
             type: string
+            pattern: ^[A-Za-z]{3}-[0-9]{3}-[A-Za-z]{2}$
           manufacturer:
             type: string
           model:
             type: string  
           year:
-            type: string  
+            type: integer
+            format: int32
           capacity:
-            type: string 
+            type: integer
+            format: int32
+            minimum: 1
+            maximum: 400
           created_on:
-            type: string  
+            type: string
+            format: date-time  
   GetBusesRes:
     type: object
     properties:
@@ -114,19 +127,27 @@ definitions:
           type: object
           properties:
             id:
-              type: string
+              type: integer
+              format: int64
             number_plate:
               type: string
+              pattern: ^[A-Za-z]{3}-[0-9]{3}-[A-Za-z]{2}$
             manufacturer:
               type: string
             model:
               type: string  
             year:
-              type: string  
+              type: integer
+              format: int32
+              minimum: 1970
             capacity:
-              type: string 
+              type: integer
+              format: int32
+              minimum: 1
+              maximum: 400
             created_on:
-              type: string    
+              type: string
+              format: date-time   
   errorDef:
     type: object
     properties:
