--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "exec-db-production": "npm run build && NODE_ENV=production npm run migration && npm run seeder",
     "migration": "node ./dist/model/db/migrations.db",
     "seeder": "node ./dist/model/db/seed.db",
-    "heroku-postbuild": "NODE_ENV=production npm run exec-db-production"
+    "heroku-postbuild": "NODE_ENV=production npm run build"
   },
   "repository": {
     "type": "git",
